--- a/.github/workflows/build-and-push-to-ECR-development.yml
+++ b/.github/workflows/build-and-push-to-ECR-development.yml
@@ -137,11 +137,11 @@ jobs:
         IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
       run: |
         # Tag the image as latest
-        sudo docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
         # Push the specific version tag
-        sudo docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         # Push the latest tag
-        sudo docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
     
     - name: Add runner to docker group
       run: |
