--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@
 version: '2.4'  # The last version of Docker Compose file format that directly supports mem_limit and cpus
 services:
   counter-service:
-    container_name: counter-service-exercise
-    image: 833779331988.dkr.ecr.us-east-2.amazonaws.com/counter-service-exercise:latest
+    container_name: counter-service-dev
+    image: 833779331988.dkr.ecr.us-east-2.amazonaws.com/counter-service-dev:latest
     volumes:
       - ./data:/data
     ports:
