--- a/.github/workflows/build-and-push-to-ECR-development.yml
+++ b/.github/workflows/build-and-push-to-ECR-development.yml
@@ -105,7 +105,7 @@ jobs:
         ECR_REPOSITORY: ${{ env.REPO_NAME }}
         IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
       run: |
-        sudo docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        sudo docker build --no-cache -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "IMAGE_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
 ###########################################################
